--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 		<div class="arlo_tm_mobile_menu_wrap">
    			<div class="mob_menu">
 				<ul class="anchor_nav">
-					<li><a href="#home">Home</a></li>
-					<li><a href="#about">About</a></li>
-					<li><a href="#services">Services</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#news">News</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#home">Inicio</a></li>
+					<li><a href="#about">Sobre mí</a></li>
+					<li><a href="#expert">Experiencia</a></li>
+					<li><a href="#educacion">Educación</a></li>
+					<li><a href="#portfolio">Portafolio</a></li>
+					<li><a href="#contact">Contacto</a></li>
 				</ul>
 			</div>
 		</div>
@@ -83,16 +83,16 @@
 		<div class="arlo_tm_leftpart_wrap">
 			<div class="leftpart_inner">
 				<div class="logo_wrap">
-					<a href="#"><img src="img/logo/desktop-logo.png" alt="desktop-logo" /></a>
+					<a href="#"><img src="img/logo/site-logo.png" alt="desktop-logo" /></a>
 				</div>
 				<div class="menu_list_wrap">
 					<ul class="anchor_nav">
-						<li><a href="#home">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#services">Services</a></li>
-						<li><a href="#portfolio">Portfolio</a></li>
-						<li><a href="#news">News</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#home">Inicio</a></li>
+						<li><a href="#about">Sobre mí</a></li>
+						<li><a href="#expert">Experiencia</a></li>
+						<li><a href="#educacion">Educación</a></li>
+						<li><a href="#portfolio">Portafolio</a></li>
+						<li><a href="#contact">Contacto</a></li>
 					</ul>
 				</div>
 				<div class="leftpart_bottom">
@@ -127,10 +127,10 @@
 										<img src="img/hero/img.jpg" alt="hero" />
 									</div>
 									<div class="name_holder">
-										<h3>Alan <span>Michaelis</span></h3>
+										<h3>John <span>Doe</span></h3>
 									</div>
 									<div class="text_typing">
-										<p>I'm a <span class="arlo_tm_animation_text_word"></span></p>
+										<p>Soy un <span class="arlo_tm_animation_text_word"></span></p>
 									</div>
 								</div>
 							</div>
@@ -146,8 +146,8 @@
 					<div class="arlo_tm_about_wrapper_all">
 						<div class="container">
 							<div class="arlo_tm_title_holder">
-								<h3>About Me</h3>
-								<span>Main informations about me</span>
+								<h3>Acerca de mí</h3>
+								<span>Presentación</span>
 							</div>
 							<div class="arlo_tm_about_wrap">
 								<div class="author_wrap">
@@ -166,10 +166,10 @@
 									</div>
 									<div class="rightbox">
 										<div class="arlo_tm_mini_title_holder">
-											<h4>I'm Alan Michaelis and <span class="arlo_tm_animation_text_word"></span></h4>
+											<h4>Soy John Doe y soy <span class="arlo_tm_animation_text_word"></span></h4>
 										</div>
 										<div class="definition">
-											<p>Hi! My name is <strong>Alan Michaelis</strong>. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.</p>
+											<p>¡Hola! Soy Desarrollador Web y soy un apasionado por mi trabajo. Con 20 años de experiencia como desarrollador web profesional, he adquirido las habilidades y conocimientos necesarios para hacer que tu proyecto sea un éxito. Disfruto cada paso del proceso de diseño, desde la discusión y la colaboración hasta el concepto y la ejecución, pero encuentro la mayor satisfacción al ver que el producto final cumple con todo lo que mi cliente ha pedido.</p>
 										</div>
 										<div class="about_short_contact_wrap">
 											<ul>
@@ -192,7 +192,7 @@
 													<span><label>Degree:</label> Master</span>
 												</li>	
 												<li>
-													<span><label>Website:</label> <a href="#">www.mywebsite.com</a></span>
+													<span><label>Website:</label> <a href="index.html"><u>Enlace</u></a></span>
 												</li>
 												<li>
 													<span><label>Mail:</label> <a href="mailto:example@gmail.com">mymail&#64;gmail.com</a></span>
@@ -208,10 +208,10 @@
 										<div class="buttons_wrap">
 											<ul>
 												<li>
-													<a href="index.html"><span>Download CV</span></a>
+													<a href="index.html"><span>Descargar CV</span></a>
 												</li>
 												<li class="anchor">
-													<a href="#contact"><span>Send Message</span></a>
+													<a href="#contact"><span>Enviar  Mensaje</span></a>
 												</li>
 											</ul>
 										</div>
