--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirección automática</title>
+    <title>Hoja de Vida Personal</title>
 </head>
 <body>
-    <p>¡Serás redirigido en 5 segundos!</p>
 
-    <script>
-        // Espera 5 segundos (5000 milisegundos) y luego redirige
-        setTimeout(function() {
-            window.location.href = 'https://resume-359e8.web.app'; // Cambia la URL a la que deseas redirigir
-        }, 500);
-    </script>
+    <script src="redireccion.js"></script>
 </body>
 </html>
+
